# cracked_resume

./: .gitignore  .latexmkrc  BUILD.bazel  README.md  build-document.nix  default.nix  flake.nix  maskfile.md  result  resume.tex  resume.typ  template.typ
.direnv/: flake-profile-4-link
cv/: education.tex  experience.tex  projects.tex  skills.tex
resume/cv/: summary.tex
templates/awesome/: template.typ
templates/latex/: template.typ
